syntax = "proto3";

package erc20;

message Transfer {
  string from = 1;
  string to = 2;
  string amount = 3;
  string token_address = 4;
  uint64 block_number = 5;
}
